--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Juggle Monkey Games
+email: jeff@jugglemonkey.com
+url: https://jugglemonkey.com
+description: "HTML games portfolio"
+skills: "More fun than a barrel of monkeys"
+meta_author: Jeff Schomay
 
 # Google webmaster tools
 google_verify:
@@ -24,10 +24,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 3f2046
+  secondary: 41abb9
+  dark: 333333
+  light: eee
 
 # Footer settings
 footer:
